--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "1.0.0",
   "description": "Learning node, express and mongodb",
   "main": "app.js",
+  "targets": {
+    "main": false
+  },
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --dist-dir ./public/js/bundled",
+    "build:js": "parcel build ./public/js/index.js --dist-dir ./public/js/bundled"
   },
   "author": "Juan Torres",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "core-js": "^3.41.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -22,10 +31,23 @@
     "mongoose": "^5.13.23",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9",
     "pug": "^3.0.3",
+    "regenerator-runtime": "^0.14.1",
     "slugify": "^1.6.6",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
+  },
+  "devDependencies": {
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "nodemon": "^3.1.9",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.13.3",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
+    "vm-browserify": "^1.1.2"
   }
 }
