--- a/config.env.sample
+++ b/config.env.sample
@@ -12,3 +12,11 @@ EMAIL_USERNAME=
 EMAIL_PASSWORD=
 EMAIL_HOST=
 EMAIL_PORT=
+
+EMAIL_FROM=
+
+SENDGRID_USERNAME=
+SENDGRID_PASSWORD=
+
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
